# papercoat

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: index.html  privacy.html
src/: cli.rs  config.rs  extractor.rs  main.rs  renderer.rs  templates.rs  transformer.rs  tui.rs
