[package]
name = "papercoat"
version = "1.0.0"
edition = "2021"
description = "Turn any novel PDF into a convincing academic paper"
license = "MIT"
authors = ["PaperCoat"]
repository = "https://github.com/papercoat/papercoat"

[[bin]]
name = "papercoat"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

# Terminal beauty
indicatif = "0.17"
console = "0.15"
tabled = "0.18"
syntect = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# PDF handling
lopdf = "0.34"
pdf-extract = "0.9"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"

# File watching
notify = "7"

# Parallelism
rayon = "1"

# Misc
rand = "0.8"

[profile.release]
opt-level = 2
strip = true
lto = true
