[package]
name = "papercoat"
version = "1.0.1"
edition = "2021"
description = "Turn any novel PDF into a convincing academic paper. Stay productive. Read fiction."
license = "MIT"
authors = ["PaperCoat <hello@papercoat.dev>"]
repository = "https://github.com/malamutes/papercoat"
homepage = "https://papercoat.dev"
documentation = "https://github.com/malamutes/papercoat#readme"
readme = "README.md"
keywords = ["pdf", "academic", "disguise", "literature", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "papercoat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
console = "0.15"
tabled = "0.18"
syntect = "5"
ratatui = "0.29"
crossterm = "0.28"
lopdf = "0.34"
pdf-extract = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
notify = "7"
rayon = "1"
rand = "0.8"

[profile.release]
opt-level = 2
strip = true
lto = true
